...
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 40.0, 0.0, 0.0),
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('LoginEmail_12s8'),
                                            controller:
                                                _model.loginEmailTextController,
                                            focusNode:
                                                _model.loginEmailFocusNode,
                                            autofocus: false,
                                            enabled: true,
...
                                      Padding(
                                        padding: EdgeInsetsDirectional.fromSTEB(
                                            0.0, 10.0, 0.0, 0.0),
                                        child: Container(
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('LoginPassword_67t3'),
                                            controller: _model
                                                .loginPasswordTextController,
                                            focusNode:
                                                _model.loginPasswordFocusNode,
                                            autofocus: false,
                                            enabled: true,
...
                              borderRadius: BorderRadius.circular(46.0),
                            ),
                          ),
                        ),
                      if (_model.tabBarCurrentIndex == 0)
                        FFButtonWidget(
                          key: ValueKey('SignupButton_510d'),
                          onPressed: () async {
                            logFirebaseEvent('LOGIN_PAGE_SignupButton_ON_TAP');
                            logFirebaseEvent('SignupButton_auth');
                            GoRouter.of(context).prepareAuthEvent();
                            if (_model.signupPasswordTextController.text !=
                                _model.confirmPasswordTextController.text) {
...
